make it releasable